2006-11-23 Kimmo
 PATCH: [ 1601440 ] Manual: improve command line options chapter
  Manual: Command_line.xml
 Update WinMerge version number and manual revision number (1.3.0) for trunk
  Manual: WinMerge_help.xml

2006-11-22 Kimmo
 PATCH: [ 1600651 ] Manual: clarify folder filter rules about starting mark
  Manual: Filters.xml
 PATCH: [ 1600658 ] Manual: Add minimize commandline parameter
  Manual: Command_line.xml

2006-11-21 Tim
 PATCH: [ 1398013 ] Add availability of binary viewing/merging to FAQ
  Manual: Faq.xml
 Move "filecomp1.png" screenshot after the first paragraph. This looks better and more consistent.
  Manual: Compare_files.xml

2006-11-20 Tim
 PATCH: [ 1599401 ] Manual: Use bold text for questions (FAQ)
  Manual/css: all.css help.css print.css

2006-11-07 Tim
 PATCH: [ 1592234 ] Manual: Nicer Shortcut keys tables
  Manual: Shortcut_keys.xml
  Manual/css: all.css help.css print.css

2006-11-06 Tim
 PATCH: [ 1586878 ] Manual: Replace "aborted.png" with transpatent GIF version
  Manual: Compare_dirs.xml
  Manual/screenshots: binary.gif folderup.gif folderup_disable.gif
  Manual/screenshots new file: aborted.gif
  Manual/screenshots deleted file: aborted.png

2006-11-06 Takashi
 PATCH: [ 1586705 ] DirView icons (Tim made [not]equalfile.ico)
  Manual/screenshots: equal.gif fileskip.gif foldercomp1.png
    lfile.gif notequal.gif rfile.gif

2006-10-30 Tim
 PATCH: [ 1586867 ] Manual: Replace "example1.gif" with new PNG version
  Manual/screenshots new file: missing_lines.png
  Manual/screenshots deleted file: example1.gif
 Remove unnecessary image "unknown.gif".
  Manual/screenshots deleted file: unknown.gif

2006-10-19 Kimmo
 PATCH: [ 1578456 ] Manual: Small tweaks for installing doc
  Manual: Install.xml

2006-10-11 Kimmo
 PATCH: [ 1574644 ] Manual: Fix cvs id-line in filters-doc
  Manual: Filters.xml

2006-10-10 Kimmo
 PATCH: [ 1573933 ] Manual: Update introduction chapter
  Manual: Introduction.xml